# rcli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml  output.toml  test.rest
01_rcli/: Cargo.toml
01_rcli/fixtures/: b64.txt
01_rcli/src/: lib.rs  main.rs  opts.rs  process.rs
01_rcli/src/cli/: base64.rs  csv_opts.rs  mod.rs
01_rcli/src/process/: b64.rs  csv_convert.rs  gen_pass.rs
fixtures/: 512token.txt  blake3.txt  ed25519.pk  ed25519.sk  standard_b64.txt  token.txt
src/: lib.rs  main.rs
src/cli/: base64.rs  csv_opts.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_jwt.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
templates/: hello.html
